# wasm_demos

./: .gitignore  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js  router.ts
src/pages/: maze.vue  md5.vue
src/utils/: maze.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
