[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata]
wasm-opt = false

[dependencies]
md5 = "0.7.0"
wasm-bindgen = "0.2"
rand = "*"
wasm-bindgen-test="0.3"
js-sys = "0.3"
getrandom = {version = "0.2",features = ["js"]}

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Window","Document",
  "Element"
]